fix titles on mobile

--- a/src/pages/Resume.css
+++ b/src/pages/Resume.css
@@ -29,7 +29,7 @@ header {
 
 .titles {
   text-align: left;
-  flex: 1; /* Allow titles to take up remaining space */
+  flex: 2; /* Allow titles to take up remaining space */
 }
 
 .socials {
@@ -182,11 +182,11 @@ a:hover {
 
 @media (max-width: 480px) {
   header h1 {
-    font-size: 1em;
+    font-size: 1.5em;
   }
   
   header h2 {
-    font-size: .8em;
+    font-size: 1em;
   }
 
   header p {
